test/errors/python_error/zs/api_clashing/union_with_api_clash_error.zs
package api_clashing.union_with_api_clash_error;

union Api
{
    uint32 field32;
    uint64 field64;
};
